--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ body,
 }
 
 .movies .movie {
-  flex: 1;
+  flex-basis: 49%;
   background-color: white;
   margin-bottom: 70px;
   display: flex;
@@ -50,10 +50,6 @@ body,
   color: #adaeb9;
   box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.25),
     0 8px 16px -8px rgba(0, 0, 0, 0.3), 0 -6px 16px -6px rgba(0, 0, 0, 0.025);
-}
-
-.movie + .movie {
-  margin-left: 10px;
 }
 
 .movie img {
